--- a/PhongKham/src/main/webapp/resources/css/register.css
+++ b/PhongKham/src/main/webapp/resources/css/register.css
@@ -48,6 +48,16 @@ input#name{
     
 }
 
+select#name{
+    width: 315px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    outline: 0;
+    padding: 7px;
+    background-color: #fff;
+    box-shadow: inset 1px 1px 5px rgba(0,0,0,0.3);
+}
+
 input#submit{
     width: 200px;
     padding: 7px;
